Opened 18 years ago
Closed 18 years ago
#1184 closed bug (fixed)
Display AM/PM opposite from settings
Reported by: | cebif | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Time & Date | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If I open Preferences/Time and change setting to AM, IT displays PM, in the Deskbar. If I change it to PM, it displays AM in the Deskbar Expected result should be AM in Preferences/Time=AM shown on the Deskbar and PM in Preferences/Time=PM shown on the Deskbar. The version I was using was hrev20808.
Change History (3)
comment:1 by , 18 years ago
comment:2 by , 18 years ago
Maybe parts of the code of Deskbar don't agree on the meaning of "no setting", and a toggle message it sent so the wrong setting is carried around until it's saved and read on next boot...
comment:3 by , 18 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
It would have been helpful to know it only happens when it's twelve o'clock... Anyway, it's fixed since hrev21490.
I need to make a correction to this bug report. The bug only occurs for setting AM/PM if I have not rebooted when setting up Time at first. This is after first boot into Haiku after installing. After that I seem to be able to set AM or PM in Preferences/Time and the setting will match on the Deskbar. .