* The AM/PM value wasn't correctly shown when it was 12 o'clock. This fixes bug #1184. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21490 a95241bf-73f2-0310-859d-f6bbb57e9c96