src/preferences/time/DateTimeEdit.h
@@ -4,7 +4,7 @@
 #include "SectionEdit.h"
 
 // TSection descendent to hold uint32 value
-class TDateTimeSection: public TSection {
+class TDateTimeSection : public TSection {
 	public:
 		TDateTimeSection(BRect frame, uint32 data = 0);
 		~TDateTimeSection();
@@ -12,38 +12,35 @@ class TDateTimeSection: public TSection {
 		uint32 Data() const;
 		void SetData(uint32 data);
 	private:
-		uint32 f_data;
+		uint32 fData;
 };
 
 // TSectionEdit descendent to edit time
-class TTimeEdit: public TSectionEdit {
+class TTimeEdit : public TSectionEdit {
 	public:
 		TTimeEdit(BRect frame, const char *name, uint32 sections);
 		~TTimeEdit();
-		
+
 		virtual void InitView();
 		virtual void DrawSection(uint32 index, bool isfocus);
 		virtual void DrawSeperator(uint32 index);
-		
+
 		virtual void SetSections(BRect area);
 		virtual void SectionFocus(uint32 index);
 		virtual void GetSeperatorWidth(uint32 *width);
-		
+
 		void CheckRange();
-		
+
 		virtual void DoUpPress();
 		virtual void DoDownPress();
-		
+
 		virtual void BuildDispatch(BMessage *message);
-		
+
 		void SetTo(uint32 hour, uint32 minute, uint32 second);
 };
 
-
-/* DATE TSECTIONEDIT */
-
 // TSectionEdit descendent to edit Date
-class TDateEdit: public TSectionEdit {
+class TDateEdit : public TSectionEdit {
 	public:
 		TDateEdit(BRect frame, const char *name, uint32 sections);
 		~TDateEdit();
@@ -66,5 +63,4 @@ class TDateEdit: public TSectionEdit {
 		void SetTo(uint32 hour, uint32 minute, uint32 second);
 };
 
-
-#endif //DATETIME_H
+#endif // DATETIME_H
